index.css
@media only screen and (max-width:580px){
    svg{
        transform: scale(1.7);
    }
    .loadingGIF{
        transform: scale(.5);
    }
}

a:hover{
    fill: rgb(199, 59, 8);
    cursor: pointer;

}

h1, h2{
    text-align: center;
    display: block;
    font-family: 'Lato', sans-serif;

}
.map{
    fill: rgb(17, 7, 61);
    height: 80vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.modal{
    display: none;
    position: fixed;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0,0,0,0.4);
   
}
.modalContent{
    background-color: #fefefe;
    max-width: 80vh;
    max-height: 80vh;
    padding: 20px;
    border: 1px solid #888; 
    margin-left: auto;
    margin-right: auto;
    border-radius: 10px;
    margin-top: 50px;
    margin-bottom: 50px;
    overflow: scroll;

}
.show{
    display: block;
}
.hide{
    display: none;
}
.closeBtn {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}
  
.closeBtn:hover,
.closeBtn:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}
#parksContainer{
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}
  
.parkWrapper{
    border: 1px solid lightgrey;
    border-radius: 10px;
    max-width: 300px;
    margin-bottom: 100px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: 0 20px 40px;
    padding: 15px;
    box-shadow: 1px 2px 1px lightgrey;
}

  
#learnMoreBtn{
    border-radius: 15px;
    background-color: rgb(17, 7, 61);
    width: 100px;
    height: 25px;
    display: grid;
    place-items: center;
    color: white;
    text-decoration: none;
}
#learnMoreBtn:hover{
    cursor: pointer;
}
.loadingGIF{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

